// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`selector features > :has() > derives a host aggregate with :scope:has() > complexity 1`] = `
{
  "attributeRuns": 4,
  "closest": 0,
  "getVar": 0,
  "importNode": 0,
  "listenerRuns": 0,
  "matches": 8,
  "parentElement": 0,
  "quarkRuns": 2,
  "queryScopeCost": 8,
  "querySelectorAll": 2,
  "removeAttribute": 2,
  "ruleRuns": 4,
  "schedulePaint": 4,
  "setAttribute": 3,
  "setVar": 0,
  "textContent": 0,
  "variableRuns": 0,
}
`;

exports[`selector features > :has() > re-checks the subject when an attribute named in the argument changes below it > complexity 1`] = `
{
  "attributeRuns": 2,
  "closest": 0,
  "getVar": 0,
  "importNode": 0,
  "listenerRuns": 0,
  "matches": 12,
  "parentElement": 14,
  "quarkRuns": 2,
  "queryScopeCost": 0,
  "querySelectorAll": 0,
  "removeAttribute": 2,
  "ruleRuns": 2,
  "schedulePaint": 2,
  "setAttribute": 2,
  "setVar": 0,
  "textContent": 0,
  "variableRuns": 0,
}
`;

exports[`selector features > :is() / :where() / :not() > observes :not() arguments on ancestor compounds > complexity 1`] = `
{
  "attributeRuns": 4,
  "closest": 0,
  "getVar": 0,
  "importNode": 0,
  "listenerRuns": 0,
  "matches": 4,
  "parentElement": 0,
  "quarkRuns": 2,
  "queryScopeCost": 6,
  "querySelectorAll": 3,
  "removeAttribute": 3,
  "ruleRuns": 2,
  "schedulePaint": 4,
  "setAttribute": 3,
  "setVar": 0,
  "textContent": 0,
  "variableRuns": 0,
}
`;

exports[`selector features > class and id selectors > fans out below an ancestor whose class changes > complexity 1`] = `
{
  "attributeRuns": 4,
  "closest": 0,
  "getVar": 0,
  "importNode": 0,
  "listenerRuns": 0,
  "matches": 4,
  "parentElement": 0,
  "quarkRuns": 2,
  "queryScopeCost": 6,
  "querySelectorAll": 3,
  "removeAttribute": 2,
  "ruleRuns": 2,
  "schedulePaint": 4,
  "setAttribute": 4,
  "setVar": 0,
  "textContent": 0,
  "variableRuns": 0,
}
`;

exports[`selector features > sibling combinators > ~ re-runs the following siblings when the earlier sibling changes > complexity 1`] = `
{
  "attributeRuns": 2,
  "closest": 0,
  "getVar": 0,
  "importNode": 0,
  "listenerRuns": 0,
  "matches": 4,
  "parentElement": 2,
  "quarkRuns": 2,
  "queryScopeCost": 6,
  "querySelectorAll": 2,
  "removeAttribute": 2,
  "ruleRuns": 2,
  "schedulePaint": 2,
  "setAttribute": 2,
  "setVar": 0,
  "textContent": 0,
  "variableRuns": 0,
}
`;

exports[`selector features > structural pseudo-classes > re-positions :first-child / :last-child when a sibling is removed > complexity 1`] = `
{
  "attributeRuns": 2,
  "closest": 0,
  "getVar": 0,
  "importNode": 0,
  "listenerRuns": 0,
  "matches": 0,
  "parentElement": 0,
  "quarkRuns": 1,
  "queryScopeCost": 6,
  "querySelectorAll": 3,
  "removeAttribute": 0,
  "ruleRuns": 3,
  "schedulePaint": 2,
  "setAttribute": 1,
  "setVar": 0,
  "textContent": 0,
  "variableRuns": 0,
}
`;
